--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -11,7 +11,7 @@
  ">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
 
   <!-- meta description -->
 <meta name="description" content="Somos especialistas en resolver problemas relacionados a la apertura y cierre de puertas. Realzamos trabajos las 24 horas, a domicilio y en nuestro local. Llaves codificadas, aperturas de auto, levantacristales, cajas fuertes, copia de llaves.">
@@ -35,7 +35,7 @@
 
     <!-- Imagen logo inicio -->
     <div>
-      <img class="logo-inicio" src="images/logo-inicio.webp" alt="el logo de la marca">
+      <img class="logo-inicio" src="../images/logo-inicio.webp" alt="el logo de la marca">
     </div>
     <!-- info de horario y whatsapp -->
     <div class="abierto">Abierto 24 horas - 1162013451
@@ -44,7 +44,7 @@
 
     <nav>
       <div>
-        <a href="https://www.whatsapp.com/"><img class="whats-inicio" src="images/logo-whats.webp"
+        <a href="https://www.whatsapp.com/"><img class="whats-inicio" src="../images/logo-whats.webp"
             alt="logo whatsapp"></a>
       </div>
     </nav>
@@ -69,19 +69,19 @@
           <div class="collapse navbar-collapse " id="navbarNav">
             <ul class=" navbar-nav ">
               <li class=" linkinicio  nav-item">
-                <a class=" nav-link " href="index.html">Inicio</a>
+                <a class=" nav-link " href="../index.html">Inicio</a>
               </li>
               <li class=" linkinicio nav-item">
-                <a class=" nav-link " href="nosotros.html">Nosotros</a>
+                <a class=" nav-link " href="./nosotros.html">Nosotros</a>
               </li>
               <li class=" linkinicio  nav-item">
-                <a class="nav-link" href="productos.html">Productos</a>
+                <a class="nav-link" href="./productos.html">Productos</a>
               </li>
               <li class=" linkinicio  nav-item">
-                <a class=" nav-link " href="servicios.html">Servicios</a>
+                <a class=" nav-link " href="./servicios.html">Servicios</a>
               </li>
               <li class=" linkinicio  nav-item">
-                <a class=" nav-link active" href="contacto.html">Contacto</a>
+                <a class=" nav-link active" href="./contacto.html">Contacto</a>
               </li>
             </ul>
           </div>
@@ -131,53 +131,43 @@
   <!-- fin main -->
 
 
+
   <!-- inicio footer -->
 
   <footer>
-    <!-- acá irian algunas fotitos de marcas tmb -->
 
     <!-- incio div imagenes -->
     <div class="imagenfoot">
-      <img class="fotosfoot" src="images/imgfoot.webp" alt="imagenes de marcas de trabajo. Ejemplo 'Travex'.">
+      <img class="fotosfoot" src="../images/imgfoot.webp" alt="imagenes de marcas de trabajo. Ejemplo 'Travex'.">
     </div>
 
 
-
-
     <!-- redes sociales -->
-    <div class="container redes">
-      <div class="row">
-        <div class="col-3">
-          <nav>
-            <a href="https://www.whatsapp.com/"><img class="logowhats" src="images/WHWWHW.webp"
-                alt="imagen logo whatsapp"></a>
-            <p class="textosredes">11111111</p>
-          </nav>
-        </div>
+<section class="sec-redes">
 
-        <div class="col-3">
-          <nav>
-            <a href="https://www.instagram.com/"><img class="logoinsta" src="images/logoinstane.png"
-                alt="logo Instagram"></a>
-            <p class="textosredes">Muguencerrajería</p>
-          </nav>
-        </div>
-      
+  <div >
+    <nav>
+      <a href="https://www.whatsapp.com/"><img class="redes-item" src="../images/whatsapp1.webp"
+          alt="imagen logo whatsapp"></a>
+      <p class="textosredes">11111111</p>
+    </nav>
+  </div>
 
-        <div class="col-3">
-          <img class="logomail" src="images/logomail.png" alt="logo e-mail, hotmail, gmal">
-          <p class="textosredes">mugencerrajeria@gmail.com</p>
+  <div >
+    <nav>
+      <a href="https://www.instagram.com/"><img class="redes-item" src="../images/instagram1.webp"
+          alt="logo Instagram"></a>
+      <p class="textosredes">Muguencerrajería</p>
+    </nav>
+  </div>     
 
-        </div>
 
-        <div class="col-3">
-          <img class="logopago" src="images/logopago.png" alt="logo pagos, efectivo, MercadoPago">
-          <p class="textosredes">Aceptamos efectivo, tarjeta y Mercado Pago</p>
-
-        </div>
-      </div>
-     </div>
-
+   <div >
+    <img class="redes-item" src="../images/pago1.webp" alt="logo pagos, efectivo, MercadoPago">
+    <p class="textosredes">Aceptamos efectivo, tarjeta y Mercado Pago</p>
+    </div>
+</section>
+     
 
 
 
