--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -12,7 +12,7 @@
  ">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
 
   <!-- meta description -->
   <meta name="description"
@@ -36,16 +36,19 @@
 
     <!-- Imagen logo inicio -->
     <div>
-      <img class="logo-inicio" src="images/logo-inicio.webp" alt="el logo de la marca">
-    </div>
-    <!-- info de horario y whatsapp -->
-    <div class="abierto">Abierto 24 horas - 1162013451
+      <img class="logo-inicio" src="../images/logo-inicio.webp" alt="el logo de la marca">
     </div>
 
+    <!-- info de horario y whatsapp -->
+    <div class="container-abierto">
+<p class="abierto">Emergencias las 24 horas - 1162013451</p>
+    </div>
+  
+  
 
     <nav>
       <div>
-        <a href="https://www.whatsapp.com/"><img class="whats-inicio" src="images/logo-whats.webp"
+        <a href="https://www.whatsapp.com/"><img class="whats-inicio" src="../images/logo-whats.webp"
             alt="logo whatsapp"></a>
       </div>
     </nav>
@@ -72,19 +75,19 @@
           <div class="collapse navbar-collapse " id="navbarNav">
             <ul class=" navbar-nav ">
               <li class=" linkinicio  nav-item">
-                <a class=" nav-link " href="index.html">Inicio</a>
+                <a class=" nav-link " href="../index.html">Inicio</a>
               </li>
               <li class=" linkinicio nav-item">
-                <a class=" nav-link " href="nosotros.html">Nosotros</a>
+                <a class=" nav-link " href="./nosotros.html">Nosotros</a>
               </li>
               <li class=" linkinicio  nav-item">
-                <a class="nav-link" href="productos.html">Productos</a>
+                <a class="nav-link" href="./productos.html">Productos</a>
               </li>
               <li class=" linkinicio  nav-item">
-                <a class=" nav-link active" href="servicios.html">Servicios</a>
+                <a class=" nav-link active" href="./servicios.html">Servicios</a>
               </li>
               <li class=" linkinicio  nav-item">
-                <a class=" nav-link " href="contacto.html">Contacto</a>
+                <a class=" nav-link " href="./contacto.html">Contacto</a>
               </li>
             </ul>
           </div>
@@ -106,7 +109,7 @@
     <div class="container servicioscont">
       <div class="row">
         <div class="col-6">
-          <img class="imgservicios" src="images/servicios1.webp" alt="imagen de una cerradura, alusiva a la cerrajería de hogar">
+          <img class="imgservicios" src="../images/servicios1.webp" alt="imagen de una cerradura, alusiva a la cerrajería de hogar">
         </div>
         
         <div class="col-6">
@@ -139,13 +142,13 @@
 
         <div class="col-6">
 
-          <img class="imgservicios" src="images/servicios2.webp" alt="imagen de un auto y llave, alusiva a la cerrajería automotor">
+          <img class="imgservicios" src="../images/servicios2.webp" alt="imagen de un auto y llave, alusiva a la cerrajería automotor">
         </div>
       </div>
 
       <div class="row">
         <div class="col-6">
-          <img class="imgservicios3" src="images/servicios3.webp" alt="imagen de un edificio">
+          <img class="imgservicios" src="../images/servicios3.webp" alt="imagen de un edificio">
         </div>
         <div class="col-6">
           <h2 class="tituloservicios">Atención a consorcios</h2>
@@ -163,53 +166,42 @@
 
   <!-- fin main -->
 
-
   <!-- inicio footer -->
 
   <footer>
-    <!-- acá irian algunas fotitos de marcas tmb -->
 
     <!-- incio div imagenes -->
     <div class="imagenfoot">
-      <img class="fotosfoot" src="images/imgfoot.webp" alt="imagenes de marcas de trabajo. Ejemplo 'Travex'.">
+      <img class="fotosfoot" src="../images/imgfoot.webp" alt="imagenes de marcas de trabajo. Ejemplo 'Travex'.">
     </div>
-
 
 
     <!-- redes sociales -->
-    <div class="container redes">
-      <div class="row">
-        <div class="col-3">
-          <nav>
-            <a href="https://www.whatsapp.com/"><img class="logowhats" src="images/WHWWHW.webp"
-                alt="imagen logo whatsapp"></a>
-            <p class="textosredes">11111111</p>
-          </nav>
-        </div>
+<section class="sec-redes">
 
-        <div class="col-3">
-          <nav>
-            <a href="https://www.instagram.com/"><img class="logoinsta" src="images/logoinstane.png"
-                alt="logo Instagram"></a>
-            <p class="textosredes">Muguencerrajería</p>
-          </nav>
-        </div>
+  <div >
+    <nav>
+      <a href="https://www.whatsapp.com/"><img class="redes-item" src="../images/whatsapp1.webp"
+          alt="imagen logo whatsapp"></a>
+      <p class="textosredes">11111111</p>
+    </nav>
+  </div>
+
+  <div >
+    <nav>
+      <a href="https://www.instagram.com/"><img class="redes-item" src="../images/instagram1.webp"
+          alt="logo Instagram"></a>
+      <p class="textosredes">Muguencerrajería</p>
+    </nav>
+  </div>     
 
 
-        <div class="col-3">
-          <img class="logomail" src="images/logomail.png" alt="logo e-mail, hotmail, gmal">
-          <p class="textosredes">mugencerrajeria@gmail.com</p>
-
-        </div>
-
-        <div class="col-3">
-          <img class="logopago" src="images/logopago.png" alt="logo pagos, efectivo, MercadoPago">
-          <p class="textosredes">Aceptamos efectivo, tarjeta y Mercado Pago</p>
-
-        </div>
-      </div>
+   <div >
+    <img class="redes-item" src="../images/pago1.webp" alt="logo pagos, efectivo, MercadoPago">
+    <p class="textosredes">Aceptamos efectivo, tarjeta y Mercado Pago</p>
     </div>
-
+</section>
+     
 
 
 
