--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -26,33 +26,38 @@
 
   <title> Contacto - Muguen Cerrajería - Hogar y Automotor  </title>
 </head>
-
 <body>
-
   <!-- Header -->
 
   <header>
 
     <!-- Imagen logo inicio -->
     <div>
-      <img class="logo-inicio" src="../images/logo-inicio.webp" alt="el logo de la marca">
-    </div>
-    <!-- info de horario y whatsapp -->
-    <div class="abierto">Abierto 24 horas - 1162013451
+      <img class="img-logo" src="../images/logo-inicio.webp" alt="el logo de la marca">
     </div>
 
+    
+  <!-- whatsapp fixed -->
+  <nav>
+    <a class="container-whats" href="https://www.whatsapp.com/"><img class="img-whats" src="../images/logo-whats.webp"
+       alt="logo whatsapp"></a>
+ 
+</nav>
 
-    <nav>
-      <div>
-        <a href="https://www.whatsapp.com/"><img class="whats-inicio" src="../images/logo-whats.webp"
-            alt="logo whatsapp"></a>
-      </div>
-    </nav>
+<!-- emergencias 24-hs -->
 
+<div class="container-abierto">
+
+  <p class="p-abierto">Emergencias las 24 horas - 1162013451</p>
+</div>
 
     <!-- título de la pág -->
+<div>
 
-    <h1 class="titulo">MUGEN CERRAJERÍA </h1>
+  <h1 class="h1-titulo">MUGEN CERRAJERÍA </h1>
+</div>
+
+    
 
 
     <!-- navbar  -->
