--- a/index.html
+++ b/index.html
@@ -163,33 +163,34 @@
   <footer>
 
     <!-- incio div imagenes -->
-    <div class="imagenfoot">
-      <img class="fotosfoot" src="images/imgfoot.webp" alt="imagenes de marcas de trabajo. Ejemplo 'Travex'.">
+    <div class="container-imgfoot">
+      <img class="img-foot" src="../images/imgfoot.webp" alt="imagenes de marcas de trabajo. Ejemplo 'Travex'.">
     </div>
 
 
     <!-- redes sociales -->
-<section class="sec-redes">
+<section class="section-redes">
 
   <div >
     <nav>
-      <a href="https://www.whatsapp.com/"><img class="redes-item" src="images/whatsapp1.webp"
+      <a href="https://www.whatsapp.com/"><img class="item-redes" src="../images/whatsapp1.webp"
           alt="imagen logo whatsapp"></a>
-      <p class="textosredes">11111111</p>
+      <p class="p-redes">11111111</p>
     </nav>
   </div>
 
   <div >
     <nav>
-      <a href="https://www.instagram.com/"><img class="redes-item" src="images/instagram1.webp"
+      <a href="https://www.instagram.com/"><img class="item-redes" src="../images/instagram1.webp"
           alt="logo Instagram"></a>
-      <p class="textosredes">Muguencerrajería</p>
+      <p class="p-redes">Muguencerrajería</p>
     </nav>
   </div>     
 
+
    <div >
-    <img class="redes-item" src="images/pago1.webp" alt="logo pagos, efectivo, MercadoPago">
-    <p class="textosredes">Aceptamos efectivo, tarjeta y Mercado Pago</p>
+    <img class="item-redes" src="../images/pago1.webp" alt="logo pagos, efectivo, MercadoPago">
+    <p class="p-redes">Aceptamos efectivo, tarjeta y Mercado Pago</p>
     </div>
 </section>
      
@@ -199,7 +200,7 @@
     <!-- copyright -->
 
     <div>
-      <p class="copy">Copyright © 2022 / Aviso Legal </p>
+      <p class="p-copy">Copyright © 2022 / Aviso Legal </p>
     </div>
 
 
