--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -104,39 +104,39 @@
 
   <!-- inicio main -->
   <main>
-<section class="sec-products">
+<section class="container-products">
 
   <div>
-    <img class="imgproduct" src="../images/controles-card.webp" alt="imagen de controles">
-    <p class="textproduct"> Accesorios </p>
+    <img class="img-product" src="../images/controles-card.webp" alt="imagen de controles">
+    <p class="p-product"> Accesorios </p>
   </div>
   <div>
-    <img class="imgproduct" src="../images/carcaza-card.webp" alt="imagen de carcazas de llaves de autos">
-    <p class="textproduct">Carcazas</p>
+    <img class="img-product" src="../images/carcaza-card.webp" alt="imagen de carcazas de llaves de autos">
+    <p class="p-product">Carcazas</p>
   </div>
   <div>
-    <img class="imgproduct" src="../images/card-cerradura2.webp" alt="imagen de una cerradura">
-    <p class="textproduct">Cerraduras</p>
+    <img class="img-product" src="../images/card-cerradura2.webp" alt="imagen de una cerradura">
+    <p class="p-product">Cerraduras</p>
   </div>
   <div>
-    <img class="imgproduct" src="../images/cilindro-card.webp" alt="imagen de un cilindro cerraduras">
-    <p class="textproduct">Cilindros</p>
+    <img class="img-product" src="../images/cilindro-card.webp" alt="imagen de un cilindro cerraduras">
+    <p class="p-product">Cilindros</p>
   </div>
     <div>
-      <img class="imgproduct" src="../images/alarmas11.webp" alt="imagen de una alarma">
-      <p class="textproduct">Alarmas</p>
+      <img class="img-product" src="../images/alarmas11.webp" alt="imagen de una alarma">
+      <p class="p-product">Alarmas</p>
     </div>
     <div>
-      <img class="imgproduct" src="../images/controlacesso1.webp" alt="imagen de un control de acceso">
-      <p class="textproduct">Controles de Acceso</p>
+      <img class="img-product" src="../images/controlacesso1.webp" alt="imagen de un control de acceso">
+      <p class="p-product">Controles de Acceso</p>
     </div>
     <div>
-      <img class="imgproduct" src="../images/tambores 111.webp" alt="imagen de un tambor de puerta">
-      <p class="textproduct">Tambores</p>
+      <img class="img-product" src="../images/tambores 111.webp" alt="imagen de un tambor de puerta">
+      <p class="p-product">Tambores</p>
     </div>
     <div>
-      <img class="imgproduct" src="../images/manijas manijones.webp" alt="imagen de una manija de puerta">
-      <p class="textproduct">Manijas</p>
+      <img class="img-product" src="../images/manijas manijones.webp" alt="imagen de una manija de puerta">
+      <p class="p-product">Manijas</p>
     </div>
  
 </section>
@@ -147,34 +147,34 @@
   <footer>
 
     <!-- incio div imagenes -->
-    <div class="imagenfoot">
-      <img class="fotosfoot" src="../images/imgfoot.webp" alt="imagenes de marcas de trabajo. Ejemplo 'Travex'.">
+    <div class="container-imgfoot">
+      <img class="img-foot" src="../images/imgfoot.webp" alt="imagenes de marcas de trabajo. Ejemplo 'Travex'.">
     </div>
 
 
     <!-- redes sociales -->
-<section class="sec-redes">
+<section class="section-redes">
 
   <div >
     <nav>
-      <a href="https://www.whatsapp.com/"><img class="redes-item" src="../images/whatsapp1.webp"
+      <a href="https://www.whatsapp.com/"><img class="item-redes" src="../images/whatsapp1.webp"
           alt="imagen logo whatsapp"></a>
-      <p class="textosredes">11111111</p>
+      <p class="p-redes">11111111</p>
     </nav>
   </div>
 
   <div >
     <nav>
-      <a href="https://www.instagram.com/"><img class="redes-item" src="../images/instagram1.webp"
+      <a href="https://www.instagram.com/"><img class="item-redes" src="../images/instagram1.webp"
           alt="logo Instagram"></a>
-      <p class="textosredes">Muguencerrajería</p>
+      <p class="p-redes">Muguencerrajería</p>
     </nav>
   </div>     
 
 
    <div >
-    <img class="redes-item" src="../images/pago1.webp" alt="logo pagos, efectivo, MercadoPago">
-    <p class="textosredes">Aceptamos efectivo, tarjeta y Mercado Pago</p>
+    <img class="item-redes" src="../images/pago1.webp" alt="logo pagos, efectivo, MercadoPago">
+    <p class="p-redes">Aceptamos efectivo, tarjeta y Mercado Pago</p>
     </div>
 </section>
      
@@ -184,7 +184,7 @@
     <!-- copyright -->
 
     <div>
-      <p class="copy">Copyright © 2022 / Aviso Legal </p>
+      <p class="p-copy">Copyright © 2022 / Aviso Legal </p>
     </div>
 
 
