--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -104,14 +104,14 @@
       <div class="row">
 
         <!-- enviar un mensaje por mail -->
-        <div class="col-6 form"   >
-          <div  action="form.php" method="POST" class="mb-3">
+        <div class="col-6 form">
+          <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Email o Teléfono</label>
-            <input type="email" name="mail" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
           </div>
           <div class="mb-3">
-            <label for="exampleFormControlTextarea1" class="form-label" >Consulta</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" name="consulta" rows="3"></textarea>
+            <label for="exampleFormControlTextarea1" class="form-label">Consulta</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
           </div>
           <div class="col-12">
             <button type="submit" class="btn btn-primary">Enviar</button>
